results/3f9cd989af8901737b6e51fbd1789659/err_code.txt
  File "./pyfile.py", line 19
    runitem = MCMCWrapper({fitarraystring}, emcee, m,C, x, , sigma_gauss, [object Object], 1000, 1000, 100, 2, {errval}, fanatapan@yahoo.co.uk, 3f9cd989af8901737b6e51fbd1789659, {modelStrings},   argslist = (x, 0.65, data)
                                                           ^
SyntaxError: invalid syntax
